# ising

./: annealing.ipynb  pyproject.toml
